grafana_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
      - monitor.cicd.auzmor.com
      secretName: grafana-cicd-auzmor-tls
  rules:
    - host: monitor.cicd.auzmor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
